Update README and notebook

--- a/notebooks/01_sims4_forecast_setup.ipynb
+++ b/notebooks/01_sims4_forecast_setup.ipynb
@@ -216,14 +216,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cc1a78d6-8424-4aa6-9631-859ede7a59a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "ac0c6f43-d9ab-415d-a1bd-7fbdb1746601",
    "metadata": {},
@@ -243,14 +235,6 @@
     "date_like = [c for c in df.columns if \"date\" in c.lower() or \"release\" in c.lower()]\n",
     "date_like\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f563ce59-ab9a-4b74-b8e2-78c2a8573234",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -518,6 +502,125 @@
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "48a24315-4090-456d-9caa-51a024c4db56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(          ds  y\n",
+       " 0 2014-09-01  1\n",
+       " 1 2014-10-01  0\n",
+       " 2 2014-11-01  0\n",
+       " 3 2014-12-01  1\n",
+       " 4 2015-01-01  1,\n",
+       "             ds  y\n",
+       " 133 2025-10-01  2\n",
+       " 134 2025-11-01  2\n",
+       " 135 2025-12-01  3\n",
+       " 136 2026-01-01  0\n",
+       " 137 2026-02-01  3,\n",
+       " y\n",
+       " 0    59\n",
+       " 1    54\n",
+       " 2    19\n",
+       " 3     5\n",
+       " 5     1\n",
+       " Name: count, dtype: int64)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "path = \"../data/sims4_dlc.xlsx\"\n",
+    "df_raw = pd.read_excel(path)\n",
+    "\n",
+    "col = \"Release Date\"\n",
+    "df_raw[col] = pd.to_datetime(df_raw[col], errors=\"coerce\")\n",
+    "df_raw = df_raw.dropna(subset=[col])\n",
+    "\n",
+    "df_raw[\"ds\"] = df_raw[col].dt.to_period(\"M\").dt.to_timestamp()\n",
+    "\n",
+    "df_ts = (\n",
+    "    df_raw.groupby(\"ds\")\n",
+    "    .size()\n",
+    "    .rename(\"y\")\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "all_months = pd.date_range(df_ts[\"ds\"].min(), df_ts[\"ds\"].max(), freq=\"MS\")\n",
+    "df_ts = df_ts.set_index(\"ds\").reindex(all_months, fill_value=0).rename_axis(\"ds\").reset_index()\n",
+    "\n",
+    "df_ts.head(), df_ts.tail(), df_ts[\"y\"].value_counts().sort_index()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "3608a09e-f18e-4d39-a0c9-434ce0a7dab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(138,\n",
+       " 112,\n",
+       " 0.8115942028985508,\n",
+       " 9.73913043478261,\n",
+       " year\n",
+       " 2014     2\n",
+       " 2015     8\n",
+       " 2016     7\n",
+       " 2017     7\n",
+       " 2018     5\n",
+       " 2019     6\n",
+       " 2020     5\n",
+       " 2021    12\n",
+       " 2022    11\n",
+       " 2023    12\n",
+       " 2024    13\n",
+       " 2025    21\n",
+       " 2026     3\n",
+       " Name: y, dtype: int64,\n",
+       " 0.7032967032966823,\n",
+       " 32.264749139749135)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df_ts.copy()\n",
+    "df[\"year\"] = df[\"ds\"].dt.year\n",
+    "\n",
+    "months_n = len(df)\n",
+    "releases_total = int(df[\"y\"].sum())\n",
+    "avg_month = float(df[\"y\"].mean())\n",
+    "avg_year_equiv = float(avg_month * 12)\n",
+    "\n",
+    "annual = df.groupby(\"year\")[\"y\"].sum().sort_index()\n",
+    "\n",
+    "trend_model = np.polyfit(annual.index.values, annual.values, 1)\n",
+    "slope_per_year = float(trend_model[0])\n",
+    "\n",
+    "yoy_pct = (annual.pct_change() * 100).replace([np.inf, -np.inf], np.nan)\n",
+    "avg_yoy_pct = float(yoy_pct.dropna().mean())\n",
+    "\n",
+    "months_n, releases_total, avg_month, avg_year_equiv, annual, slope_per_year, avg_yoy_pct"
    ]
   },
   {
@@ -1076,14 +1179,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "08ced426-8d3c-4264-8f00-8d50203c8317",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
    "id": "a74bf7d1-a441-42f4-b162-4bb57a58f000",
    "metadata": {},
@@ -1223,43 +1318,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3df26dc3-b44e-40e1-9f9f-e8a9c1e8629c",
+   "execution_count": 49,
+   "id": "f934a33b-c5e8-42ab-9a67-4a08137ac531",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(67.1226595369377),\n",
+       " np.float64(1.8645183204704918),\n",
+       " ds\n",
+       " 2026-01-01    16.139104\n",
+       " 2027-01-01    21.782769\n",
+       " 2028-01-01    24.757559\n",
+       " 2029-01-01     4.443228\n",
+       " Freq: YS-JAN, Name: yhat, dtype: float64)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import pandas as pd\n",
     "\n",
+    "f = pd.read_csv(\"../data/forecast_36_months_sarima.csv\")\n",
+    "f[\"ds\"] = pd.to_datetime(f[\"ds\"])\n",
     "\n",
+    "total_36m = f[\"yhat\"].sum()\n",
+    "avg_month_forecast = f[\"yhat\"].mean()\n",
     "\n",
+    "per_year = f.set_index(\"ds\")[\"yhat\"].resample(\"YS\").sum()\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "total_36m, avg_month_forecast, per_year\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1c95706-bc61-425e-bcaf-8f3fcb84f2de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1eb496e8-fc49-4a24-8929-bd4aa96cc615",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68ef31db-a929-4982-8cc0-c9214e8837fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
