Update README and notebook; cleanup

--- a/notebooks/01_sims4_forecast_setup.ipynb
+++ b/notebooks/01_sims4_forecast_setup.ipynb
@@ -29,6 +29,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "id": "73c1d38b-540d-4494-85c4-0b3adc533fe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sprawdziam strukturę pliku, jakie tam sa arkusze, aby upewnic sie, skad wziac wlasciwe dane"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "a49b05a3-9e42-4c13-bc77-35e96b2be473",
    "metadata": {},
@@ -156,6 +166,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9dbd4d4b-c9be-4b89-a787-6cec838b7ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wczytalam do dataframe konkretny arkusz ktory mnie interesowal i podejrzalam pierwsze wiersze (czy dane sa sensowne i to na pewno ten arkusz)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "f22c7e5a-09c7-40da-b82f-9fd7cddab41c",
    "metadata": {},
@@ -178,6 +198,16 @@
    ],
    "source": [
     "df.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "2c362551-6fc9-4145-9b62-b85b44ab16e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IDENTYFIKACJA ZMIENNYCH - najwazniejsza kolumna z data wydania istnieje, sprawdzam pisownie, wiedze inne mozliwe / brakujace dane"
    ]
   },
   {
@@ -216,6 +246,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "66cf806d-ad53-4359-bc0b-6af566e2dd6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KONTROLA TYPÓW DANYCH - rzeczywiscie sa to daty, spojne formy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "ac0c6f43-d9ab-415d-a1bd-7fbdb1746601",
    "metadata": {},
@@ -234,6 +274,16 @@
    "source": [
     "date_like = [c for c in df.columns if \"date\" in c.lower() or \"release\" in c.lower()]\n",
     "date_like\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5df4911b-918e-42f1-b201-05808584c7c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wyszukalam sobie kolumny, ktore maja daty - dla sportu i dla pewnosci"
    ]
   },
   {
@@ -337,6 +387,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "6f0e74cd-3c3f-4d3b-801a-a5a28cb4e0e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DALSZA KONTROLA JAKOŚCI DANYCH - format, czy ida chroologicznie"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "cdb1c76a-80b7-42d2-8459-cde87599fda0",
    "metadata": {},
@@ -356,6 +416,17 @@
     "df[\"Release Date\"] = pd.to_datetime(df[\"Release Date\"], errors=\"coerce\")\n",
     "df = df.dropna(subset=[\"Release Date\"]).copy()\n",
     "df[\"Release Date\"].min(), df[\"Release Date\"].max(), df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2a91da84-18c0-482e-a7a6-e5dda73490d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# konwertuję kolumnę Release Date do date/time, jak trafi się blad to nic sie nie wykrzaczy tylko ustawi sie \"brak\", \n",
+    "# usuwam braki, sanity check - wyszlo 112 rekordow i 13 kolumn\n"
    ]
   },
   {
@@ -400,6 +471,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "f7a9fb38-3de8-4b37-9436-464b3d23e180",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BARDZO WAŻNE - zrobilam tutaj szereg czasowy z pokedynczych zdarzen - tego potrzebuje SARIMA, kazda data zmapowana na miesiac \n",
+    "# a potem policzylam liczbe premier w miesiacu - to tylko miesiace z premieriami, wiem!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "57983471-1fa1-43c3-a4c6-14dab8a9e3a0",
    "metadata": {},
@@ -424,6 +506,16 @@
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d9bffbb0-139f-4df3-a597-01581b7eba1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prosta wizualizacja zevy zobaczyc z grubsza trend - pomija miesiace bez premiery - widac wzrost intensywnosci"
    ]
   },
   {
@@ -478,6 +570,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "id": "7162970c-1e4b-4d81-af96-ca5f8381805e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tutaj juz jest wszystko, sa miesiace z 0 premierami - bo brak premiery to nie brak informacji - juz tutaj widac mocna nieregularnosc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "cb6a058c-756a-4bbc-83e1-3403fec298c9",
    "metadata": {},
@@ -502,6 +604,16 @@
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "6df62b57-9dd8-4eaa-b632-46fd64d51146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# i oto wykres juz poprawny - SARIMA da radę, wnioski będa sensowne"
    ]
   },
   {
@@ -568,6 +680,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "7e248200-70a6-4dab-af71-eb5e2cd68e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tutaj uporzdkowalam wszystko - importy, wczytaie danych, czyszczenie dat, ujednolicenie dat, agregacja, miesiace z 0, kontrola jakości \n",
+    "# niby zbędne ale chcialam się upewnic"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "id": "3608a09e-f18e-4d39-a0c9-434ce0a7dab4",
    "metadata": {},
@@ -625,6 +748,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "id": "4a89274e-6077-4ec7-8be2-f91416d3f28b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#a tutaj zebralam informacje historyczne - czyli ile wyszlo dodatkow od wydania gry do 02.2026 - potem wykorzystalam to we wnioskach\n",
+    "# 138 miesiecy danych, 112 premier, srednio 0,8 DLC na miesiac, srednio 9 na rok, trend liniowy na rok +0,7, \n",
+    "# srednia zmiana 32% - zawyzona przez duzy skok w 2025\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "96f73592-0f10-4df8-b709-2ae194b463d0",
    "metadata": {},
@@ -657,6 +792,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "id": "cd23e1b8-cd77-4ff2-afe3-1e7a1d5ac08e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# zbior treningowy i testowy - bez mieszania w czasie - ostatnie 12 msc to zbior testowy - ucze model przeszlosci i \n",
+    "# sprawdzilam jak przewidzial kolejne 12 msc\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "0140ded9-b516-438d-828d-e6b1092cecfa",
    "metadata": {},
@@ -684,6 +831,19 @@
     "\n",
     "mae_base, rmse_base\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aee181fe-0b7c-45b1-bd0d-554f622422a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# baseline i policzylam metryki bledu na zbiorze testowym - bo SARIMA ma sens keidy jest lepsza niz cos prostego \n",
+    "# jak last observation carried forward - no i wiadomo, ze tutaj baseline wypadnie srednio\n",
+    "# bo mam dyzo 0 i skoki\n",
+    "# MAE i RMSE - jesli SARIMA ich nie pobije, to sie nie oplaca, stay tuned"
    ]
   },
   {
@@ -733,6 +893,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "id": "70284b7c-9d34-427b-90b6-e259f6b216cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a tutaj mam drugi madrzejszy baseline - model wygladznia wykladniczgo, buduje model na zbiorze treningowym - trend addytywny bez sezonowosc\n",
+    "# no i jest lepszy niz poprzedni\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "d322d6fe-1a1d-4e4c-8f54-c0c684476268",
    "metadata": {},
@@ -760,6 +931,16 @@
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "210e1188-6e4e-42bd-bbf2-085db971ff5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wykres prognozy i rzeczywistym teste, - model wygladza dane - chodzi o trend "
    ]
   },
   {
@@ -812,6 +993,18 @@
     "rmse_sarima = np.sqrt(mse_sarima)\n",
     "\n",
     "fit_sarima.aic, mae_sarima, rmse_sarima\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "466e1d97-5a23-43e5-a93b-e0038aef46cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 rzeczy - ustawienie czestotliwosci, podzielenie danych na train test i ocena SARIMA - \n",
+    "# a poradzila sobie lepiej niz baseline i ETS - uchwycila zaleznosci czasowe\n",
+    "#pomimo nieregularnosci"
    ]
   },
   {
@@ -901,6 +1094,17 @@
     "\n",
     "\n",
     "fc_out.head(), fc_out.tail()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "0c1df788-f391-4b50-8ca2-98c6bd9a2833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#finalny model ,finalna walidacja, dopasowuję model do calosci danych \n",
+    "# prognoza punktowa rośnie mniej więcej z ~1.54 DLC/miesiąc na początku (2026-03) do ~2.23 DLC/miesiąc pod koniec\n"
    ]
   },
   {
@@ -1050,6 +1254,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "fbd4806c-d80d-465e-919d-1fc8c240414d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prognoza punktowa SARIMA jest ciągła, więc dla czytelności przekształciłam ją do liczb całkowitych i obcięłam do zera, \n",
+    "#bo prognozujemy liczbę premier, a nie wartość ułamkową ani ujemną"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "id": "0cd29db9-bec4-435b-806b-0d94ce86f806",
    "metadata": {},
@@ -1087,6 +1302,18 @@
     "\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "170c51bf-af77-4701-bdf1-51066690402a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model sugeruje utrzymanie wysokiej intensywności i lekki wzrost tempa\n",
+    "# Pomarańczowa linia to prognoza średnia, a niebieskie pole to zakres niepewności \n",
+    "#— im dalej, tym większy rozrzut, więc prognozę interpretuję jako tempo roczne/miesięczne, nie dokładny kalendarz premier"
    ]
   },
   {
